--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -42,3 +42,11 @@ video {
 /* ====================================
 // base rules
 // ==================================== */
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
