--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,11 @@
 @import "base";
 @import "layout";
 @import "modules/example";
+@import "modules/box";
+@import "modules/flexbox";
+@import "modules/selectors";
+@import "modules/article";
+@import "modules/highlight";
 @import "bootstrap/scss/bootstrap-grid";
+@import "modules/nav";
+@import "modules/card";
